Changelog for mk-query-digest:

2010-09-11: version 0.9.21

   * Empty Schema attribute was not parsed correctly in some cases (issue 1104).
   * Added /*!50100 PARTITIONS*/ to EXPLAIN line (issue 1114).
   * Added hostname to --report-format (issue 1117).
   * Added MySQL error messages from tcpdump events (issue 670).

2010-08-01: version 0.9.20

   * --outliers did not work (issue 1087).
   * Profile did not show actual query ranks (issue 1087).
   * Made header and query_report outputs easier to read (issue 699).
   * Certain queries with subqueries were converted incorrectly (issue 347).

2010-07-01: version 0.9.19

   * Profile response time % did not match query pct (issue 1073).
   * Added --progress (169).
   * ORDER BY with ASC fingerprinted differently than without ASC (issue 1030).
   * Added MISC items to profile report (issue 1043).

2010-06-08: version 0.9.18

   * Connections did not preserve server SQL modes (issue 801).
   * Added percent of class count to string attribute values (issue 1026).

2010-05-03: version 0.9.17

   * Made --report-format order configurable (issue 990).
   * Changed order of --report-format (issue 935).
   * Added "files" to --report-format (issue 955).
   * Added "date" to --report-format (issue 756).
   * Added --save-results and --[no]gzip (issue 990).
   * --order-by changed the Query_time distribution graph (issue 984).
   * Added --report-histogram (issue 984).
   * Tool crashed immediately on some older versions of Perl (issue 957).

2010-04-01: version 0.9.16

   * Admin commands were not always distilled (issue 676).
   * Admin commands were not fingerprinted correctly (issue 676).
   * General log parsing failed sometimes (issue 926).
   * Some general log timestamps were not parsed (issue 972).
   * IP addresses were truncated (issue 744).
   * Some options could fail to parse (issue 940).
   * InnoDB_*_wait attributes were not formatted as times (issue 948).
   * Added --show-all (issue 744).